JRS 01/01/2019

* The barcode state is now reset to 0 when the page is reloaded.

* Fixed the issue with the barcode representation not updating upon
  a barcode value change.
  
* Fixed issue with barcodes representation not toggling in Firefox and IE.

* Toggling a barcode bit now toggles a class, which is more robust than
  directly reading/writing the opacity.  Set CSS styles for toggling the
  barcode bit opacity.
  
* Added the ability to add multiple classes to a barcode bit box.

* Implemented box shading upon hover.