@@ -2,12 +2,26 @@
 
 <html>
   <head>
-    <title>Applied Biocode Barcode Encoder/Decoder</title>
+    <title>Applied BioCode Barcode Encoder/Decoder</title>
 
     <style>
 		body {
 			background-color: white;
 		}
+
+    .instructions {
+      max-width: 600px;
+      margin: 30px auto 0 auto;
+    }
+
+    .instructions p, li {
+      line-height: 1.3;
+    }
+
+    .instructions ul li {
+      margin-bottom : 1ex;
+    }
+
     
     /* Format the barcode representation SVG */
     .bit-unset {
@@ -59,7 +73,7 @@
 
         <div id="svg" style="display:block; margin:0 auto">
           
-		  <!-- Embed the SVG, to keep the document self-contained. -->
+		    <!-- Embed the SVG, to keep the document self-contained. -->
 		  
           <svg id="bead" style="display:block; margin:0 auto"
              xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -303,7 +317,7 @@
         </div>
 
 
-		<!-- Display the barcode number box -->
+		    <!-- Display the barcode number box -->
 		
         <div style="display:block; margin:0 auto; text-align: center;">
         
@@ -311,6 +325,35 @@
               min="0" max="4095" step="1" value="0">
               
         </div>
+
+
+        <!-- Add some simple instructions -->
+
+        <div class="instructions">
+          <h3>Instructions</h3>
+
+          <p>Applied BioCode (ABC) is a company that provides a novel
+          bead-based multiplexing assay technology. Each 70 &micro;m &times;
+          40 &micro;m bead is printed with a barcode, allowing multiple tests
+          to be distinguished in the same biological sample.</p>
+
+          <p>The barcodes are just a basic binary format, but are tedious to
+          decode visually. This is a simple app to make decoding a snap! </p>
+
+          <ul>
+            <li>Hover the mouse over the bead image. Regions that turn gray
+            represent the "bits" of the barcode. Click to "set" the bit;
+            click again to "clear" the bit. The decoded barcode number will
+            display in the number box above.</li>
+
+            <li>Alternatively, enter a number between 0 and 4095 in the
+            number box, and it will show what a bead of this barcode number
+            looks like.</li>
+          </ul>
+
+          <p>Have fun!</p>
+        </div>
+
 
       </div>
 
