@@ -14,3 +14,10 @@ JRS 01/01/2019
 * Added the ability to add multiple classes to a barcode bit box.
 
 * Implemented box shading upon hover.
+
+
+JRS 02/25/2019
+
+* Added a README file.
+
+* Added instructions to the page.
